@@ -1,6 +1,6 @@
 #ifndef SSDB_DEPS_H
 #ifndef SSDB_VERSION
-#define SSDB_VERSION "1.6.8.7"
+#define SSDB_VERSION "1.6.8.8"
 #endif
 #endif
 #include <stdlib.h>
